--- a/public/admin/articleCreation.html
+++ b/public/admin/articleCreation.html
@@ -26,7 +26,7 @@
                         <textarea name="nameArticle" id="nameArticle" cols="30" rows="10">Название статьи</textarea>
                         <input type="file">
                         <textarea name="descriptionArticle" id="descriptionArticle" cols="30" rows="10">Описание</textarea>
-                        <button id="buttonSendMes">Отправить статью</button>
+                        <button class="test" id="buttonSendMes">Отправить статью</button>
                     </form>
                 </div>
             </div>
